exo: Handle minimum size correctly when shell surface has a frame.

Widget::GetMinimumSize should return the size including the window
frame. Remove ShellSurfaceWidget override of this function in order
to have the frame view calculate this correctly.

Bug: 827736
Test: exo_unittest --gtest_filter=ShellSurface.SetMinimumSize
Change-Id: I25b59f1e2273364a5579e273b952c15590c744d0
Reviewed-on: https://chromium-review.googlesource.com/1024821
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553114}
Former-commit-id: effe17fd3e84c71f5d012a21e7c9d84eb00abf2b